--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="bg-slate-100 text-slate-800 min-h-screen">
-  <div class="max-w-2xl mx-auto p-6 space-y-6">
+  <div class="max-w-2xl mx-auto p-6 space-y-2">
 
     <h1 class="text-2xl font-bold text-center">
       外貨棚
@@ -43,13 +43,13 @@
     <!-- form -->
     <form
       id="add-form"
-      class="flex gap-3 bg-white p-4 rounded-xl shadow"
+      class="flex gap-2 bg-white rounded shadow"
     >
       <input
         id="currency"
         placeholder="USD"
         required
-        class="w-20 px-3 py-2 border rounded-lg text-center uppercase focus:outline-none focus:ring focus:ring-slate-300"
+        class="w-20 m-1 px-2 py-1 border rounded text-center uppercase focus:outline-none focus:ring focus:ring-slate-300"
       />
 
       <input
@@ -58,11 +58,12 @@
         step="any"
         placeholder="120"
         inputmode="decimal"
+        class="w-20 m-1 px-2 py-1 border rounded flex-1 text-right focus:outline-none focus:ring focus:ring-slate-300""
       />
 
       <button
-        class="px-4 py-2 bg-slate-800 text-white rounded-lg hover:bg-slate-700 active:scale-95"
-      >
+        class="text-sm m-1 px-3 py-1.5 rounded
+              bg-gray-600 text-white">
         追加
       </button>
     </form>
