--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>外貨棚</title>
+  <link rel="apple-touch-icon" href="/icon.png">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
