fix delete process

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <th class="px-4 py-2 text-left">通貨</th>
             <th class="px-4 py-2 text-right">数量</th>
             <th class="px-4 py-2 text-right">円換算</th>
+            <th class="px-4 py-2 text-right"></th>
           </tr>
         </thead>
 
@@ -36,6 +37,7 @@
           <tr>
             <th colspan="2" class="px-4 py-2 text-right">合計</th>
             <th id="total" class="px-4 py-2 text-right">0</th>
+            <th class="px-4 py-2 text-right"></th>
           </tr>
         </tfoot>
       </table>
