--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
     <h1 class="text-2xl font-bold text-center">
       外貨棚
     </h1>
-    <p id="rate-time" class="text-xs text-slate-500 text-center">
-      <!-- rate-time -->
-    </p>
+    <div class="text-center">
+      <span id="rate-time" class="text-xs text-slate-500 text-center">
+        <!-- rate-time -->
+      </span>
+      <span class="text-center my-2">
+        <button id="reload-btn" class="px-1 py-1 rounded bg-blue-400 text-white hover:bg-blue-600 text-sm">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20" fill="currentColor" class="size-5">
+            <path fill-rule="evenodd" d="M15.312 11.424a5.5 5.5 0 0 1-9.201 2.466l-.312-.311h2.433a.75.75 0 0 0 0-1.5H3.989a.75.75 0 0 0-.75.75v4.242a.75.75 0 0 0 1.5 0v-2.43l.31.31a7 7 0 0 0 11.712-3.138.75.75 0 0 0-1.449-.39Zm1.23-3.723a.75.75 0 0 0 .219-.53V2.929a.75.75 0 0 0-1.5 0V5.36l-.31-.31A7 7 0 0 0 3.239 8.188a.75.75 0 1 0 1.448.389A5.5 5.5 0 0 1 13.89 6.11l.311.31h-2.432a.75.75 0 0 0 0 1.5h4.243a.75.75 0 0 0 .53-.219Z" clip-rule="evenodd" />
+          </svg>
+        </button>
+      </span>
+    </div>
     <!-- table -->
     <div class="bg-white rounded-xl shadow overflow-hidden">
       <table class="w-full text-sm">
