--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <thead class="bg-slate-200 text-slate-600">
           <tr>
             <th class="px-4 py-2 text-left">通貨</th>
-            <th class="px-4 py-2 text-right">数量</th>
+            <th class="px-4 py-2 text-right">レート(外貨/円)</th>
+            <th class="px-4 py-2 text-right">金額</th>
             <th class="px-4 py-2 text-right">円換算</th>
             <th class="px-4 py-2 text-right"></th>
           </tr>
@@ -44,7 +45,7 @@
 
         <tfoot class="bg-slate-100 font-semibold">
           <tr>
-            <th colspan="2" class="px-4 py-2 text-right">合計</th>
+            <th colspan="3" class="px-4 py-2 text-right">合計</th>
             <th id="total" class="px-4 py-2 text-right">0</th>
             <th class="px-4 py-2 text-right"></th>
           </tr>
